creating the content and the syle of the first page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
- <h2>mem-ory balls</h2>
- <button>PLAY</button>
+<div class="first-page-content">  
+    <img class="firstPage-img" src="assets/images/th.jpg" alt="first img page"> 
+    <h2 class="firstPage-h2">mem-ory balls</h2>
+    <button class="firstPage-button">PLAY</button>
+</div> 
 </body>
 </html>
