working on the first page

--- a/first.html
+++ b/first.html
@@ -8,13 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<div class="first-page-content">  
-    <img class="firstPage-img" src="assets/images/th.jpg" alt="first img page"> 
-    <h2 class="firstPage-h2">mem-ory balls</h2>
-    <a class="first-page-button" href="first.html">PLAY</a>
-</div> 
-
-<script src=""></script>
-
+    <h1>First Levl</h1>
+    <a href="index.html">Play</a>
+    <script src=""></script>
 </body>
 </html>
