working on the first level page

--- a/first.html
+++ b/first.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>First Levl</h1>
-    <a href="index.html">Play</a>
+    <h1 class="h1-first">First Level</h1>
+    <div id="container">
+        <div class="circle"></div>
+    </div>
     <script src=""></script>
 </body>
 </html>
