--- a/first.html
+++ b/first.html
@@ -8,9 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="h1-first">First Level</h1>
     <div id="container">
-        <div class="circle"></div>
+        <h1 class="h1-first">instructions</h1>
+        <h4>Select each color once</h4>
+        <p>Each level consists of multiple colors</p>
+        <p>position of the colors will shuffle after each selection</p>
+        <a class="first-page-button" href="first.html">Start</a>
     </div>
     <script src=""></script>
 </body>
