styling the instruction page

--- a/first.html
+++ b/first.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <h1 class="h1-first">instructions</h1>
+        <h1>instructions</h1>
         <h4>Select each color once</h4>
         <p>Each level consists of multiple colors</p>
         <p>position of the colors will shuffle after each selection</p>
