--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="first-page-content">  
     <img class="firstPage-img" src="assets/images/th.jpg" alt="first img page"> 
     <h2 class="firstPage-h2">mem-ory balls</h2>
-    <a class="first-page-button" href="first.html">PLAY</a>
+    <a class="first-page-button" href="instruction.html">PLAY</a>
 </div> 
 
 <script src=""></script>
