--- a/first.html
+++ b/first.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h3>Level: <spam>1</spam> Score: <spam>0/6</spam></h3>
-    <div class="container">
+    <div id="container">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
