creating the random color and sorting it in the stuares nr

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="first-page-button" href="instruction.html">PLAY</a>
 </div> 
 
-<script src=""></script>
+<script src="script.js"></script>
 
 </body>
 </html>
