--- a/instruction.html
+++ b/instruction.html
@@ -18,6 +18,6 @@
         <p>position of the colors will shuffle after each selection</p>
         <a class="first-page-button" href="first.html">Start</a>
     </div>
-    <script src=""></script>
+    <script src="script.js"></script>
 </body>
 </html>
