--- a/first.html
+++ b/first.html
@@ -17,5 +17,6 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
