--- a/first.html
+++ b/first.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Level: <spam class="level">0</spam> Score: <spam>0/6</spam></h3>
+    <h3>Level: <spam class="level">0</spam> Score: <spam class="scored-balls">0</spam>/<spam class="balls-nr">6</spam></h3>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
