changing the structure of html and js by removing the ball div from html and creating it in the js

--- a/first.html
+++ b/first.html
@@ -10,13 +10,8 @@
 <body>
     <h3>Level: <spam class="level">0</spam> Score: <spam class="scored-balls">0</spam>/<spam class="balls-nr">6</spam></h3>
     <div id="container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
