ending the first level chanigng the lavel

--- a/instruction.html
+++ b/instruction.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
+    <div id="content">
         <h1>instructions</h1>
         <h4>Select each color once</h4>
         <p>Each level consists of multiple colors</p>
