styling the starting page and the instruction page deleted

--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
     <title>Document</title>
 </head>
 <body>
-<div class="first-page-content">  
-    <img class="firstPage-img" src="assets/images/th.jpg" alt="first img page"> 
-    <h2 class="firstPage-h2">mem-ory balls</h2>
-    <a class="first-page-button" href="instruction.html">PLAY</a>
+<div class="instructionContent">
+    <div class="allBalls">
+        <div class="fRound" style="background: rgb(245, 147, 35);"></div>
+        <div class="addBall">
+             <div class="round"style="background:#98FF98;"></div>
+             <div class="round"style="background:SkyBlue;"></div>
+        </div>
+    </div>
+     <h2 class="instruction-h2">mem-ory balls</h2>
+    <a class="start" href="first.html">PLAY</a>
+  
+    <div class="content">
+        <h4>Select each color once</h4>
+        <p>Each level consists of multiple colors</p>
+        <p>position of the colors will shuffle after each selection</p>
+    </div> 
 </div> 
 
 <script src="script.js"></script>
